--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "cloudinary": "^1.41.0",
+    "cloudinary-react": "^1.8.1",
     "formik": "^2.4.5",
+    "multer": "^1.4.5-lts.1",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
